--- a/packages/theme-chalk/src/mixins/mixin.scss
+++ b/packages/theme-chalk/src/mixins/mixin.scss
@@ -1,6 +1,5 @@
 @import "../common/var.scss";
 
-// .z-button{}
 @mixin b($block) {
     $B: $namespace+'-'+$block;
     .#{$B}{
@@ -27,6 +26,21 @@
 @mixin e($element) {
     @at-root {
         #{&+$element-separator+$element} {
+            @content;
+        }
+    }
+}
+
+@mixin button-type($color, $background-color, $border-color) {
+    color: $color;
+    background: $background-color;
+    border-color: $border-color;
+}
+
+@mixin res($key, $map: $--breakpoints) {
+    // 循环断点Map，如果存在则返回
+    @if map-has-key($map, $key) {
+        @media only screen and #{inspect(map-get($map, $key))} {
             @content;
         }
     }
